--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.0.1
+  dio: ^4.0.6
+
 
 dev_dependencies:
   flutter_test:
