--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   dio: ^4.0.6
   toast: ^0.3.0
   flutter_rating_bar: ^4.0.0
+  get_it: ^7.1.3
+  
 
 
 
@@ -53,7 +55,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/no-image.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
