--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  floor: any
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -35,13 +37,21 @@ dependencies:
   toast: ^0.3.0
   flutter_rating_bar: ^4.0.0
   get_it: ^7.1.3
-  
+  sqflite:
+  path: any
+  json_serializable: any
+  json_annotation: any
 
+  
+# dependency_overrides:
+#   analyzer: 0.39.14
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  floor_generator: any
+  build_runner: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
